--- a/index.html
+++ b/index.html
@@ -41,14 +41,14 @@
 
         <div class="container">
             <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header page-scroll">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+            <!--<div class="navbar-header page-scroll">-->
+                <!--<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <!--<a href="index.html" class="logo"></a>-->
+                <a href="index.html" class="logo"></a>-->
                 <!--
                 <a style="text-decoration:none" href="index.html">
                     <P style="color:#2E313D; font-weight:400; font-size:26px; text-align:left">mohamed</P>
@@ -57,7 +57,7 @@
                 -->
                     <!--<img class="img-responsive" src="img/name.png" alt="logo" align="middle">-->        
                 <!--<a class="navbar-brand" href="index.html">The Ball Picking Robot</a>-->
-            </div>
+           <!-- </div>-->
 
             <!-- Collect the nav links, forms, and other content for toggling -->
              <!--<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -152,6 +152,53 @@
                     <a href="https://medium.com/@FoudaMoh"><i class="fab fa-medium-m fa-2x wow bounceIn" data-wow-delay=".4s" style="padding-right: 10px;"></i></a>
                     <!--<a href="https://twitter.com/foudamoh" target="_blank"><i class="fa fa-twitter fa-2x wow bounceIn" data-wow-delay=".3s"></i></a>-->
                 </ul>
+
+
+
+                <br></br><br></br><br></br><br></br><br></br><br></br>
+
+
+      <style type="text/css" media="screen">
+        .gr_grid_container {
+          /* customize grid container div here. eg: width: 500px; */
+        }
+
+        .gr_grid_book_container {
+          /* customize book cover container div here */
+          float: left;
+          width: 98px;
+          height: 160px;
+          padding: 0px 0px;
+          overflow: hidden;
+        }
+      </style>
+      <div id="gr_grid_widget_1584904241">
+        <!-- Show static html as a placeholder in case js is not enabled - javascript include will override this if things work -->
+            <h2>
+      <a style="text-decoration: none;" rel="nofollow" href="https://www.goodreads.com/review/list/66194865-m?shelf=currently-reading&utm_medium=api&utm_source=grid_widget">Currently-reading</a>
+    </h2>
+  <div class="gr_grid_container">
+    <div class="gr_grid_book_container"><a title="1984" rel="nofollow" href="https://www.goodreads.com/book/show/40961427-1984"><img alt="1984" border="0" src="https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1532714506l/40961427._SX98_.jpg" /></a></div>
+    <div class="gr_grid_book_container"><a title="One-Pot Gourmet Gardener: Delicious container recipes to grow together and cook together" rel="nofollow" href="https://www.goodreads.com/book/show/23197369-one-pot-gourmet-gardener"><img alt="One-Pot Gourmet Gardener: Delicious container recipes to grow together and cook together" border="0" src="https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1422811298l/23197369._SX98_.jpg" /></a></div>
+    <div class="gr_grid_book_container"><a title="The Autobiography of Malcolm X" rel="nofollow" href="https://www.goodreads.com/book/show/92057.The_Autobiography_of_Malcolm_X"><img alt="The Autobiography of Malcolm X" border="0" src="https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1434682864l/92057._SX98_.jpg" /></a></div>
+    <div class="gr_grid_book_container"><a title="Well-Designed: How to Use Empathy to Create Products People Love" rel="nofollow" href="https://www.goodreads.com/book/show/21413972-well-designed"><img alt="Well-Designed: How to Use Empathy to Create Products People Love" border="0" src="https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1400936735l/21413972._SX98_.jpg" /></a></div>
+    <div class="gr_grid_book_container"><a title="Impro: Improvisation and the Theatre" rel="nofollow" href="https://www.goodreads.com/book/show/19244102-impro"><img alt="Impro: Improvisation and the Theatre" border="0" src="https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1386366926l/19244102._SX98_.jpg" /></a></div>
+    <div class="gr_grid_book_container"><a title="The Adventures of Huckleberry Finn" rel="nofollow" href="https://www.goodreads.com/book/show/2956.The_Adventures_of_Huckleberry_Finn"><img alt="The Adventures of Huckleberry Finn" border="0" src="https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1546096879l/2956._SX98_.jpg" /></a></div>
+    <div class="gr_grid_book_container"><a title="The Adventures of Tom Sawyer" rel="nofollow" href="https://www.goodreads.com/book/show/24583.The_Adventures_of_Tom_Sawyer"><img alt="The Adventures of Tom Sawyer" border="0" src="https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1404811979l/24583._SX98_.jpg" /></a></div>
+    <div class="gr_grid_book_container"><a title="Never Split the Difference" rel="nofollow" href="https://www.goodreads.com/book/show/26156469-never-split-the-difference"><img alt="Never Split the Difference" border="0" src="https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1460910517l/26156469._SX98_.jpg" /></a></div>
+    <div class="gr_grid_book_container"><a title="Against the Odds: An Autobiography" rel="nofollow" href="https://www.goodreads.com/book/show/955045.Against_the_Odds"><img alt="Against the Odds: An Autobiography" border="0" src="https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1356144428l/955045._SX98_.jpg" /></a></div>
+    <div class="gr_grid_book_container"><a title="Autobiography of a Yogi" rel="nofollow" href="https://www.goodreads.com/book/show/639864.Autobiography_of_a_Yogi"><img alt="Autobiography of a Yogi" border="0" src="https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1347427162l/639864._SX98_.jpg" /></a></div>
+    <div class="gr_grid_book_container"><a title="Thinking in Systems: A Primer" rel="nofollow" href="https://www.goodreads.com/book/show/3828902-thinking-in-systems"><img alt="Thinking in Systems: A Primer" border="0" src="https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1390169859l/3828902._SX98_.jpg" /></a></div>
+    <div class="gr_grid_book_container"><a title="The Prince" rel="nofollow" href="https://www.goodreads.com/book/show/28862.The_Prince"><img alt="The Prince" border="0" src="https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1390055828l/28862._SX98_.jpg" /></a></div>
+    <br style="clear: both"/><br/><a class="gr_grid_branding" style="font-size: .9em; color: #382110; text-decoration: none; float: right; clear: both" rel="nofollow" href="https://www.goodreads.com/user/show/66194865-m">M's favorite books »</a>
+  <noscript><br/>Share <a rel="nofollow" href="/">book reviews</a> and ratings with M, and even join a <a rel="nofollow" href="/group">book club</a> on Goodreads.</noscript>
+  </div>
+
+      </div>
+      <script src="https://www.goodreads.com/review/grid_widget/66194865.Currently-reading?cover_size=medium&hide_link=&hide_title=&num_books=12&order=d&shelf=currently-reading&sort=date_added&widget_id=1584904241" type="text/javascript" charset="utf-8"></script>
+
+
+
                 <!--<p class="text-left text-muted"><small>I’m currently looking for job opportunities in design, as I move away from engineering & fully into product designer... <a href="mailto:foudamo@gmail.com">Let’s chat if you have something in mind.</a></small></p>-->
 
                 <!--<h5 class="about-heading text-right"><a class="btn btn-default page-scroll" href="./files/OFoudaMohamed_RESUME.pdf">View Resume</a></h5>-->
