--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                 <!--<img class="about-image img-circle pull-left" src="img/Avatar.png">-->
 
                 
-				<p class="text-muted">I am a product designer and an entrepreneur. I believe that every product needs to have a fairy tale to tell and a purpose to exist for its user(s). I work on a high systemic level, learning about people's habits, behaviours & their problems; then translate that into purposeful solutions.</p>
+				<p style="color:#cdcdcd;">I am a product designer and an entrepreneur. I believe that every product needs to have a fairy tale to tell and a purpose to exist for its user(s). I work on a high systemic level, learning about people's habits, behaviours & their problems; then translate that into purposeful solutions.</p>
 
 
                 <!--<p class="text-muted"><small>I am a product designer and an entrepreneur. I believe that a product needs to have a fairy tale to tell to its user(s). Perhaps that is also why I love storytelling!</small></p>-->
@@ -143,7 +143,7 @@
                 <!--<p3 class="lead text-left text-muted">Toronto, Canada</p3>-->
 
                 <!--<p class="text-muted"><small>If you're working on a project and would like any help from me, or if you just feel like chatting about musicals and theatre <a href="mailto:foudamo@gmail.com">feel free to send me a quick message to grab coffee.</a></small></p>-->
-                <p><a style="text-decoration:none" href="mailto:foudamo@gmail.com">foudamo@gmail.com</a></p>
+                <p><a style="text-decoration:none; color:#cdcdcd;" href="mailto:foudamo@gmail.com">foudamo@gmail.com</a></p>
 
                 <ul class="nav navbar-nav navbar-left">
                     <a href="https://linkedin.com/in/foudamo"><i class="fab fa-linkedin-in fa-2x wow bounceIn" data-wow-delay=".1s" style="padding-right: 10px;"></i></a>
@@ -156,7 +156,6 @@
 
 
                 <br></br><br></br><br></br><br></br><br></br><br></br>
-
 
       <style type="text/css" media="screen">
         .gr_grid_container {
@@ -172,7 +171,7 @@
           overflow: hidden;
         }
       </style>
-      <div id="gr_grid_widget_1584904241">
+      <div id="gr_grid_widget_1584944161">
         <!-- Show static html as a placeholder in case js is not enabled - javascript include will override this if things work -->
             <h2>
       <a style="text-decoration: none;" rel="nofollow" href="https://www.goodreads.com/review/list/66194865-m?shelf=currently-reading&utm_medium=api&utm_source=grid_widget">Currently-reading</a>
@@ -180,22 +179,14 @@
   <div class="gr_grid_container">
     <div class="gr_grid_book_container"><a title="1984" rel="nofollow" href="https://www.goodreads.com/book/show/40961427-1984"><img alt="1984" border="0" src="https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1532714506l/40961427._SX98_.jpg" /></a></div>
     <div class="gr_grid_book_container"><a title="One-Pot Gourmet Gardener: Delicious container recipes to grow together and cook together" rel="nofollow" href="https://www.goodreads.com/book/show/23197369-one-pot-gourmet-gardener"><img alt="One-Pot Gourmet Gardener: Delicious container recipes to grow together and cook together" border="0" src="https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1422811298l/23197369._SX98_.jpg" /></a></div>
-    <div class="gr_grid_book_container"><a title="The Autobiography of Malcolm X" rel="nofollow" href="https://www.goodreads.com/book/show/92057.The_Autobiography_of_Malcolm_X"><img alt="The Autobiography of Malcolm X" border="0" src="https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1434682864l/92057._SX98_.jpg" /></a></div>
-    <div class="gr_grid_book_container"><a title="Well-Designed: How to Use Empathy to Create Products People Love" rel="nofollow" href="https://www.goodreads.com/book/show/21413972-well-designed"><img alt="Well-Designed: How to Use Empathy to Create Products People Love" border="0" src="https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1400936735l/21413972._SX98_.jpg" /></a></div>
-    <div class="gr_grid_book_container"><a title="Impro: Improvisation and the Theatre" rel="nofollow" href="https://www.goodreads.com/book/show/19244102-impro"><img alt="Impro: Improvisation and the Theatre" border="0" src="https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1386366926l/19244102._SX98_.jpg" /></a></div>
-    <div class="gr_grid_book_container"><a title="The Adventures of Huckleberry Finn" rel="nofollow" href="https://www.goodreads.com/book/show/2956.The_Adventures_of_Huckleberry_Finn"><img alt="The Adventures of Huckleberry Finn" border="0" src="https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1546096879l/2956._SX98_.jpg" /></a></div>
-    <div class="gr_grid_book_container"><a title="The Adventures of Tom Sawyer" rel="nofollow" href="https://www.goodreads.com/book/show/24583.The_Adventures_of_Tom_Sawyer"><img alt="The Adventures of Tom Sawyer" border="0" src="https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1404811979l/24583._SX98_.jpg" /></a></div>
-    <div class="gr_grid_book_container"><a title="Never Split the Difference" rel="nofollow" href="https://www.goodreads.com/book/show/26156469-never-split-the-difference"><img alt="Never Split the Difference" border="0" src="https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1460910517l/26156469._SX98_.jpg" /></a></div>
-    <div class="gr_grid_book_container"><a title="Against the Odds: An Autobiography" rel="nofollow" href="https://www.goodreads.com/book/show/955045.Against_the_Odds"><img alt="Against the Odds: An Autobiography" border="0" src="https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1356144428l/955045._SX98_.jpg" /></a></div>
-    <div class="gr_grid_book_container"><a title="Autobiography of a Yogi" rel="nofollow" href="https://www.goodreads.com/book/show/639864.Autobiography_of_a_Yogi"><img alt="Autobiography of a Yogi" border="0" src="https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1347427162l/639864._SX98_.jpg" /></a></div>
     <div class="gr_grid_book_container"><a title="Thinking in Systems: A Primer" rel="nofollow" href="https://www.goodreads.com/book/show/3828902-thinking-in-systems"><img alt="Thinking in Systems: A Primer" border="0" src="https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1390169859l/3828902._SX98_.jpg" /></a></div>
-    <div class="gr_grid_book_container"><a title="The Prince" rel="nofollow" href="https://www.goodreads.com/book/show/28862.The_Prince"><img alt="The Prince" border="0" src="https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1390055828l/28862._SX98_.jpg" /></a></div>
-    <br style="clear: both"/><br/><a class="gr_grid_branding" style="font-size: .9em; color: #382110; text-decoration: none; float: right; clear: both" rel="nofollow" href="https://www.goodreads.com/user/show/66194865-m">M's favorite books »</a>
+    <div class="gr_grid_book_container"><a title="The Dance of Life: The Other Dimension of Time" rel="nofollow" href="https://www.goodreads.com/book/show/906340.The_Dance_of_Life"><img alt="The Dance of Life: The Other Dimension of Time" border="0" src="https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1378321753l/906340._SX98_.jpg" /></a></div>
+    <div class="gr_grid_book_container"><a title="The Silent Language" rel="nofollow" href="https://www.goodreads.com/book/show/906338.The_Silent_Language"><img alt="The Silent Language" border="0" src="https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1364918388l/906338._SX98_.jpg" /></a></div>
   <noscript><br/>Share <a rel="nofollow" href="/">book reviews</a> and ratings with M, and even join a <a rel="nofollow" href="/group">book club</a> on Goodreads.</noscript>
   </div>
 
       </div>
-      <script src="https://www.goodreads.com/review/grid_widget/66194865.Currently-reading?cover_size=medium&hide_link=&hide_title=&num_books=12&order=d&shelf=currently-reading&sort=date_added&widget_id=1584904241" type="text/javascript" charset="utf-8"></script>
+      <script src="https://www.goodreads.com/review/grid_widget/66194865.Currently-reading?cover_size=medium&hide_link=true&hide_title=&num_books=5&order=d&shelf=currently-reading&sort=date_updated&widget_id=1584944161" type="text/javascript" charset="utf-8"></script>
 
 
 
