--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                 <!--<img class="about-image img-circle pull-left" src="img/Avatar.png">-->
 
                 
-				<p style="color:#cdcdcd;">I am a product designer and an entrepreneur. I believe that every product needs to have a fairy tale to tell and a purpose to exist for its user(s). I work on a high systemic level, learning about people's habits, behaviours & their problems; then translate that into purposeful solutions.</p>
+				<p style="color:#cdcdcd;">I am a product designer and an engineer. I believe that every product needs to have a fairy tale to tell and a purpose to exist for its user(s). I work on a high systemic level, learning about people's habits, behaviours & their problems; then translate that into purposeful solutions.</p>
 
 
                 <!--<p class="text-muted"><small>I am a product designer and an entrepreneur. I believe that a product needs to have a fairy tale to tell to its user(s). Perhaps that is also why I love storytelling!</small></p>-->
