--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 
                 
 				<p style="color:#cdcdcd;">I am an engineer and UX designer. I believe that every concept needs to have an enjoyable fairy tale to narrate, and thus a purposeful desire for why it exists for its user(s). I work on a high systemic level, learning about people's habits, behaviours & their problems; and I occasionally travel.</p>
-
+				<p style="color:#cdcdcd;">I am currently working on <a href="https://gaiaplants.com">Gaia Plants</a></p>
 
                 <!--<p class="text-muted"><small>I am a product designer and an entrepreneur. I believe that a product needs to have a fairy tale to tell to its user(s). Perhaps that is also why I love storytelling!</small></p>-->
                 <!--<p class="text-muted"><small>My educational background involves a bachelor of Engineering and (almost) 2 minors in Economics and Business, from McMaster U. I am also a self-taught designer, specifically in the areas of user experience (UX) and prototyping. And I read a lot of books.</small></p>-->
